--- a/src/Cards/ThreadcountSB.module.css
+++ b/src/Cards/ThreadcountSB.module.css
@@ -59,7 +59,7 @@
     padding-top: 0;
 
     /* Default Background: */
-    /* background: radial-gradient(circle, #ffffff, #7ab762); */
+    /* background: radial-gradient(circle, #ffffff, #217301); */
     background-position: center -30px;
 
     margin-left: -4.2px; /* Fixes the margin of the flip */
@@ -78,7 +78,7 @@
     color: #ffffff;
 }
 .iconContainer {
-    background-color: #7ab762;
+    background-color: #217301;
     width: 60px;
     height: 60px;
     position: absolute;
@@ -104,7 +104,7 @@
     top: -20px;
 }
 .flipCardFront .cardBottomHalf {
-    background-color: #7ab762;
+    background-color: #217301;
     border-top: 3px white solid;
     margin-top: 5px;
     overflow: hidden;
@@ -171,7 +171,7 @@
     margin-bottom: 3px;
 }
 .flipCardFront .miniBox1 {
-    background-color: #7ab762;
+    background-color: #217301;
     width: 100%;
     height: 75px;
 }
@@ -182,7 +182,7 @@
     margin-top: 0px;
 }
 .flipCardFront .miniBox2 {
-    background-color: #7ab762;
+    background-color: #217301;
     width: 100%;
     height: 75px;
     left: 0;
@@ -215,7 +215,7 @@
     font-style: italic;
 }
 .flipCardFront .miniBox3 {
-    background-color: #7ab762;
+    background-color: #217301;
     width: 100%;
     height: 75px;
 }
@@ -241,7 +241,7 @@
     transform: rotateY(180deg);
 }
 .flipCardBack div {
-    background-color: #7ab762;
+    background-color: #217301;
     border-radius: 5px;
     height: 500px;
 }
