--- a/src/Cards/ThreadcountSB.module.css
+++ b/src/Cards/ThreadcountSB.module.css
@@ -53,13 +53,13 @@
 /* FLIP CARD FRONT ---------------------------------------------------- CARD  */
 .flipCardFront {
     /* Holiday/Events Background: */
-    background-image: url('/public/imgs/backgrounds/threadcount.png');
+    background-image: url('/public/imgs/backgrounds/laplaya.png');
     background-size: cover; 
     background-position: 65% center; 
     padding-top: 0;
 
     /* Default Background: */
-    /* background: radial-gradient(circle, #ffffff, #217301); */
+    /* background: radial-gradient(circle, #ffffff, #7ab762); */
     background-position: center -30px;
 
     margin-left: -4.2px; /* Fixes the margin of the flip */
@@ -78,7 +78,7 @@
     color: #ffffff;
 }
 .iconContainer {
-    background-color: #217301;
+    background-color: #7ab762;
     width: 60px;
     height: 60px;
     position: absolute;
@@ -104,7 +104,7 @@
     top: -20px;
 }
 .flipCardFront .cardBottomHalf {
-    background-color: #217301;
+    background-color: #7ab762;
     border-top: 3px white solid;
     margin-top: 5px;
     overflow: hidden;
@@ -171,7 +171,7 @@
     margin-bottom: 3px;
 }
 .flipCardFront .miniBox1 {
-    background-color: #217301;
+    background-color: #7ab762;
     width: 100%;
     height: 75px;
 }
@@ -182,7 +182,7 @@
     margin-top: 0px;
 }
 .flipCardFront .miniBox2 {
-    background-color: #217301;
+    background-color: #7ab762;
     width: 100%;
     height: 75px;
     left: 0;
@@ -215,7 +215,7 @@
     font-style: italic;
 }
 .flipCardFront .miniBox3 {
-    background-color: #217301;
+    background-color: #7ab762;
     width: 100%;
     height: 75px;
 }
@@ -241,7 +241,7 @@
     transform: rotateY(180deg);
 }
 .flipCardBack div {
-    background-color: #217301;
+    background-color: #7ab762;
     border-radius: 5px;
     height: 500px;
 }
