--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 
   /* Holiday/Events Wallpaper: */
 
-  background-image: url('/public/imgs/wallpapers/fall2024.png.jpg');
+  background-image: url('/public/imgs/wallpapers/fall2024.png');
   background-size: cover; 
   background-position-x: -215px; 
   background-position-y: -130px;
